--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import '../module/hero/hero';
 @import './blocks/_productCard';
 @import '../module/categories/categories';
+@import '../module/productlist/prosuctlist';
 @import '../module/features/features';
 @import '../module/restaurant/restaurant';
 @import '../module/review/review';
