--- a/src/module/application/_application.scss
+++ b/src/module/application/_application.scss
@@ -1,4 +1,5 @@
 .application {
+    $application: &;
 
     &__inner {
         display: flex;
@@ -11,14 +12,13 @@
 
     &__box {
         max-width: 470px;
-        margin-right: 130px;
     }
 
     &__title {
         margin-bottom: 45px;
     }
 
-    &__paragraph>p {
+    &__text > p {
         margin-bottom: 30px;
         font-size: 20px;
         line-height: 1.5;
@@ -33,16 +33,36 @@
         margin-right: 30px;
     }
 
-    .application-link:hover .application__marketplace-link {
-        border-radius: 4px;
-        outline: 2px solid rgba($orange-900, 0.70);
-        box-shadow: 0px 3px 15px 0px rgba(255, 104, 56, 0.50);
-    }
+    &link{
+        border: 1px solid #C2C2C2;
+        display: block;
+
+        // &:hover {
+
+        //     #{$application}__img {
+        //         border-radius: 4px;
+        //         outline: 2px solid rgba($orange-900, 0.70);
+        //         box-shadow: 0 3px 15px 0 rgba($orange-900, 0.50);
+        //     }
+        // }
+    } 
 
     .application-link:active img {
         box-shadow: 2px 2px 5px rgba(54, 56, 83, 0.50);
     }
 
-    &:active {}
 
+    .application__apple {
+        &::before {
+            content: '';
+            mask-image: url('../../images/application/app_store.svg');
+            mask-repeat: no-repeat;
+            mask-size: contain;
+            mask-position: center;
+            display: block;
+            width: 100px;
+            height: 40px;
+            background-color: rgba($color: #000000, $alpha: 1.0);
+        }
+    }
 }
