--- a/src/module/restaurant/_restaurant.scss
+++ b/src/module/restaurant/_restaurant.scss
@@ -14,17 +14,19 @@
 }
 
 .rest-card {
-    border-radius: 10px 10px 0px 0px;
-    box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.10);
+    border-radius: 10px 10px 0 0;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.10);
     max-width: 370px;
     background-color: $white;
+    border-radius: 10px;
 
     &:hover {
-        background: $white;
-        box-shadow: 0 3px 15px 0 rgba(255, 104, 56, 0.50);
+        background-color: $white;
+        box-shadow: 0 3px 15px 0 rgba($orange-900, 0.50);
     }
 
     &__img {
+        object-fit: cover;
         margin-bottom: 15px;
     }
 
@@ -33,28 +35,31 @@
         padding: 0 20px 20px 20px;
         align-items: center;
         flex-wrap: wrap;
+        gap: 20px 0;
     }
 
     &__title {
         font-size: 24px;
         display: block;
         width: 100%;
-        margin-bottom: 20px;
         @include line-clamp(1);
     }
 
-    &__icon--time {
-        width: 22px;
-        height: 22px;
-        mask-image: url('../../images/icons/sprite.svg#icon-time');
+    &__icon {
         margin-right: 10px;
+        &--time {
+            width: 22px;
+            height: 22px;
+            mask-image: url('../../images/icons/sprite.svg#icon-time');
+        }
     }
 
-    &__time {
-        margin: 0 auto 0 0;
+    &__btn &__icon {
+        transition: transform 0.4s;
     }
 
     &__btn {
+        margin-left: auto;
         border-radius: 20px;
         padding: 0;
         display: flex;
@@ -63,12 +68,11 @@
         height: 33px;
 
         &:hover .rest-card__icon{
-            margin: 0 7px 0 auto;
+            transform: translateX(20px);
         }
 
         .rest-card__icon {
             margin: 0 auto;
-            transition: margin-left 3s, margin-right 3s;
         }
 
         &:hover .rest-card__icon,
@@ -86,19 +90,6 @@
         background-color: $white;
     }
 
-}
-
-
-.rest-card__btn .rest-card__icon {
-    transition: margin-left 3s, margin-right 3s;
-}
-
-.rest-card__btn {
-    transition: margin-left 3s, margin-right 3s;
-}
-
-.rest-card__icon {
-    transition: margin-left 3s, margin-right 3s;
 }
 
 
