--- a/src/scss/blocks/_productCard.scss
+++ b/src/scss/blocks/_productCard.scss
@@ -1,14 +1,19 @@
 .product-card {
     font-size: 15px;
-    // display: flex;
-    // align-items: center;
-    // flex-direction: column;
     padding: 20px 15px;
-    min-height: 299px;
+    height: 100%;
+    max-height: 320px;
     background-color: $white;
     outline: 1px solid #ECECEC;
     border-radius: 5px;
     transition: outline-color 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__item {
+        height: 100%;
+    }
 
     &__link {
         display: flex;
@@ -39,5 +44,6 @@
     &__btn {
         padding: 7px 14px;
         font-size: 14px;
+        margin-top: auto;
     }
 }
