--- a/src/module/application/_application.scss
+++ b/src/module/application/_application.scss
@@ -1,5 +1,4 @@
 .application {
-    $application: &;
 
     &__inner {
         display: flex;
@@ -7,7 +6,7 @@
         background-repeat: no-repeat;
         background-position: right;
         background-size: contain;
-        min-height: 385px;
+        min-height: 380px;
     }
 
     &__box {
@@ -33,36 +32,46 @@
         margin-right: 30px;
     }
 
-    &link{
-        border: 1px solid #C2C2C2;
-        display: block;
+    &__link{
+        display: flex;
+        border-radius: 5px;
+        &:hover {
+            box-shadow: 0 3px 15px 0 rgba($orange-900, 0.50);
+        }
 
-        // &:hover {
+        &:focus {
+            outline: 2px solid rgba($orange-900, 0.70);
+        }
 
-        //     #{$application}__img {
-        //         border-radius: 4px;
-        //         outline: 2px solid rgba($orange-900, 0.70);
-        //         box-shadow: 0 3px 15px 0 rgba($orange-900, 0.50);
-        //     }
-        // }
-    } 
+        &:active {
+            outline: 2px solid rgba($orange-900, 0.40);
+        }
 
-    .application-link:active img {
-        box-shadow: 2px 2px 5px rgba(54, 56, 83, 0.50);
-    }
-
-
-    .application__apple {
         &::before {
             content: '';
-            mask-image: url('../../images/application/app_store.svg');
-            mask-repeat: no-repeat;
-            mask-size: contain;
-            mask-position: center;
-            display: block;
-            width: 100px;
+            display: inline-block;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
             height: 40px;
-            background-color: rgba($color: #000000, $alpha: 1.0);
         }
-    }
+        &--apple {
+            &::before {
+                content: '';
+                width: 120px;
+                background-image: url('../../images/application/app_store.svg');
+
+            }
+        }
+        
+        &--google {
+            &::before {
+                content: '';
+                width: 135px;
+                background-image: url('../../images/application/play_store.svg');
+
+            }
+        }
+
+    } 
 }
