--- a/src/module/features/_features.scss
+++ b/src/module/features/_features.scss
@@ -16,7 +16,7 @@
         margin-top: 58px;
     }
 
-    &__text > p {
+    &__text>p {
         font-size: 20px;
         line-height: 1.5;
     }
@@ -32,31 +32,43 @@
         align-items: center;
         margin-bottom: 22px;
         font-size: 24px;
-    }
-
-    &__icon {
-        width: 34px;
-        height: 34px;
-        margin-right: 30px;
-
-        &--timer {
-            mask-image: url('../../images/icons/sprite.svg#icon-timer');
-            background-color: $orange-900;
-        }
-
-        &--delivery {
-            mask-image: url('../../images/icons/sprite.svg#icon-delivery');
-            background-color: #00AAFF;
-        }
-
-        &--restorant {
-            mask-image: url('../../images/icons/sprite.svg#icon-restorant');
-            background-color: #FF2222;
-        }
+        gap: 30px;
     }
 
     &__btn {
         font-size: 18px;
     }
+}
 
+.icon {
+
+    &--features {
+        display: flex;
+        &::before {
+            content: '';
+            width: 34px;
+            height: 34px;
+        }
+    }
+
+    &--timer {
+        &::before {
+            mask-image: url('../../images/icons/sprite.svg#icon-timer');
+            background-color: $orange-900;
+        }
+    }
+
+    &--delivery {
+        &::before {
+            mask-image: url('../../images/icons/sprite.svg#icon-delivery');
+            background-color: $blue;
+        }
+    }
+
+    &--restorant {
+        &::before {
+            mask-image: url('../../images/icons/sprite.svg#icon-restorant');
+            background-color: $red;
+        }
+    }
 }
