--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,11 +5,13 @@
 @import 'global';
 @import '../module/header/header';
 @import '../module/hero/hero';
-@import './blocks/_productCard';
 @import '../module/categories/categories';
 @import '../module/productlist/prosuctlist';
+@import '../module/productcard/productCard';
 @import '../module/features/features';
 @import '../module/restaurant/restaurant';
+@import '../module/restcard/restcard';
 @import '../module/review/review';
 @import '../module/application/application';
 @import '../module/footer/footer';
+@import '../module/swiperjs/swiperjs';
