--- a/src/module/features/_features.scss
+++ b/src/module/features/_features.scss
@@ -16,9 +16,12 @@
         margin-top: 58px;
     }
 
-    &__text>p {
-        font-size: 20px;
-        line-height: 1.5;
+    &__text {
+        
+        p {
+            font-size: 20px;
+            line-height: 1.5;
+        }
     }
 
     &__title,
