--- a/src/module/restcard/_restcard.scss
+++ b/src/module/restcard/_restcard.scss
@@ -50,7 +50,7 @@
 
 
             &::before {
-                transition: transform 1s, background-color 0.3s;
+                transition: transform 1s ease-in-out, background-color 0.3s;
                 transform: translateX(25px);
                 background-color: $orange-900;
             }
@@ -84,6 +84,7 @@
             height: 16px;
             background-color: $white;
             mask-image: url('../../images/icons/sprite.svg#icon-arrow-right');
+            transition: transform 0.5s ease-in-out;
         }
     }
 }
